# EZMonitor

./: .gitignore  CMakeLists.txt  EZMonitor-0.2-Release.spec  README.md  _service  de.agundur.ezmonitor-0.1.plasmoid  ezmonitor.spec  plasmoid_builder.sh  readme.txt
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: configGeneral.qml  main.qml
package/contents/ui/config/: ConfigMisc.qml
